# hsimev

./: .dockerignore  Dockerfile  LICENSE  README.org  cabal.project  cabal.project.freeze  hsimev.cabal
.github/workflows/: haskell.yml
app/: Config.hs  Main.hs
src/: ChargingStation.hs  Ocpi221.hs  OcpiStation.hs  PriorityMap.hs
test/: FakeSimulation.hs  MyLibTest.hs  Ocpi221Tests.hs  OcpiStationTests.hs  PriorityMapTests.hs
