cabal-version:      3.0
name:               hsimev
version:            0.1.0.0
synopsis:           Simulate an EV Charger + Connected car

-- A longer description of the package.
-- description:
homepage:           https://github.com/pcrama/hsimev

license:            BSD-2-Clause
license-file:       LICENSE
author:             Philippe Crama
maintainer:         pcfeb0009@gmx.com

copyright: 2025 Philippe Crama
-- category:
extra-source-files: README.org

library
    exposed-modules:  MyLib, ChargingStation

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , text
                    , mtl
                    , transformers
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: NamedFieldPuns, OverloadedStrings

executable hsimev
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hsimev

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: NamedFieldPuns, OverloadedStrings

test-suite hsimev-test
    default-language: Haskell2010
    default-extensions: NamedFieldPuns, OverloadedStrings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
                    , mtl
                    , transformers
                    , tasty
                    , tasty-hunit
                    , text
                    , hsimev
