cabal-version:      3.0
name:               hsimev
version:            0.1.0.0
synopsis:           Simulate an EV Charger + Connected car

description:        Simulate EV chargers (+ cars) talking the OCPI 2.2.1 protocol while consuming energy.
homepage:           https://github.com/pcrama/hsimev

license:            BSD-2-Clause
license-file:       LICENSE
author:             Philippe Crama
maintainer:         pcfeb0009@gmx.com

copyright: 2025 Philippe Crama
-- category:
extra-source-files: README.org

library
    exposed-modules:  ChargingStation, Ocpi221

    -- Modules included in this library but not exported.
    other-modules:    OcpiStation

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.4.0 && <4.19
                    , HTTP ^>=4000.5
                    , aeson ^>=2.2.3
                    , bytestring ^>=0.12.2
                    , mtl ^>=2.3.2
                    , network-uri ^>=2.6.4.2
                    , text ^>=2.1.3
                    , time ^>=1.14
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: DeriveGeneric, DeriveAnyClass, DerivingStrategies, NamedFieldPuns, NoGeneralizedNewtypeDeriving, OverloadedStrings
    ghc-options:
                      -- For details on warnings: https://downloads.haskell.org/~ghc/master/users-guide/using-warnings.html
                      -- This list taken from https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
                      -- Enable all warnings with -Weverything, then disable the ones we don’t care about
                      -Weverything
                      -- missing-exported-signatures turns off the more strict -Wmissing-signatures. See https://ghc.haskell.org/trac/ghc/ticket/14794 ticket
                      -Wno-missing-exported-signatures
                      -- Requires explicit imports of _every_ function (e.g. ‘$’); too strict
                      -Wno-missing-import-lists
                      -- When GHC can’t specialize a polymorphic function. No big deal and requires fixing underlying libraries to solve.
                      -Wno-missed-specialisations
                      -- See missed-specialisations
                      -Wno-all-missed-specialisations
                      -- Don’t use Safe Haskell warnings
                      -Wno-unsafe
                      -- Don’t use Safe Haskell warnings
                      -Wno-safe
                      -- Warning for polymorphic local bindings; nothing wrong with those.
                      -Wno-missing-local-signatures
                      -- Don’t warn if the monomorphism restriction is used
                      -Wno-monomorphism-restriction

executable hsimev
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.16.4.0 && <4.19,
        scotty ^>=0.22,
        text,
        hsimev

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: DerivingStrategies, NamedFieldPuns, NoGeneralizedNewtypeDeriving, OverloadedStrings, Safe

test-suite hsimev-test
    default-language: Haskell2010
    default-extensions: DerivingStrategies, NamedFieldPuns, NoGeneralizedNewtypeDeriving, OverloadedStrings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.16.4.0 && <4.19
                    , mtl
                    , tasty
                    , tasty-hunit
                    , text
                    , hsimev
